made an adaptation, improved the logic

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/styled-components": "^5.1.9",
     "axios": "^0.21.1",
+    "beautiful-react-hooks": "^0.35.0",
     "eslint-config-standard": "^16.0.2",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
