--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/redux-actions": "^2.6.1",
+    "@types/reselect": "^2.2.0",
     "@types/styled-components": "^5.1.9",
     "axios": "^0.21.1",
     "beautiful-react-hooks": "^0.35.0",
@@ -27,7 +29,9 @@
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
+    "redux-actions": "^2.6.5",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
