--- a/package.json
+++ b/package.json
@@ -15,17 +15,15 @@
     "@types/reselect": "^2.2.0",
     "@types/styled-components": "^5.1.9",
     "axios": "^0.21.1",
+    "babel-eslint": "^10.1.0",
     "beautiful-react-hooks": "^0.35.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.23.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "gh-pages": "^3.1.0",
-    "moment": "^2.29.1",
-    "moment-timezone": "^0.5.33",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-moment": "^1.1.1",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
