--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,15 @@
 {
-  "extends": "standard",
-  "parser": "babel-eslint",
-  "rules": {
-    "react-hooks/exhaustive-deps": 0,
-    "no-unused-vars": 0,
-    "no-undef": 0
-  }
+  "extends": "react-app"
+  // "parser": "babel-eslint",
+  // "parserOptions": {
+  //   "ecmaVersion": 6,
+  //   "ecmaFeatures": {
+  //     "experimentalObjectRestSpread": true
+  //   }
+  // },
+  // "rules": {
+  //   "react-hooks/exhaustive-deps": 0,
+  //   "no-unused-vars": 0,
+  //   "no-undef": 0
+  // }
 }
