--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": "react-app"
+  "extends": "react-app",
   // "parser": "babel-eslint",
   // "parserOptions": {
   //   "ecmaVersion": 6,
@@ -7,9 +7,9 @@
   //     "experimentalObjectRestSpread": true
   //   }
   // },
-  // "rules": {
-  //   "react-hooks/exhaustive-deps": 0,
-  //   "no-unused-vars": 0,
-  //   "no-undef": 0
-  // }
+  "rules": {
+    "react-hooks/exhaustive-deps": 0
+    // "no-unused-vars": 0,
+    // "no-undef": 0
+  }
 }
