--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,8 @@
 	"name": "Weather App",
 	"lang": "en",
 	"description": "Weather viewing apps",
-	"start_url": "/",
+	"start_url": "https://st63.github.io/weather-app/",
+  "scope": "./",
 	"background_color": "#00aae7",
 	"theme_color": "#00aae7",
 	"dir": "ltr",
