--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"name": "Weather App",
 	"lang": "en",
 	"description": "Weather viewing apps",
-	"start_url": "./?utm_source=web_app_manifest",
+	"start_url": "./",
   "scope": "./",
 	"background_color": "#00aae7",
 	"theme_color": "#00aae7",
