--- a/manifest.json
+++ b/manifest.json
@@ -1,27 +1,25 @@
 {
-	"short_name": "Weather App",
-	"name": "Weather App",
-	"lang": "en",
-	"description": "Weather viewing apps",
-	"start_url": "./",
-  "scope": "./",
-	"background_color": "#00aae7",
-	"theme_color": "#00aae7",
-	"dir": "ltr",
-	"display": "standalone",
-	"orientation": "any",
-	"icons": [
+  "short_name": "React App",
+  "name": "Create React App Sample",
+  "icons": [
     {
-      "src": "./logo512.png",
+      "src": "favicon.ico",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/x-icon"
+    },
+    {
+      "src": "logo192.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
+      "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512"
-    },
-		{
-			"src": "./logo192.png",
-			"type": "image/png",
-			"sizes": "192x192"
-		}
-	],
-  "prefer_related_applications": false
+    }
+  ],
+  "start_url": ".",
+  "display": "standalone",
+  "theme_color": "#000000",
+  "background_color": "#ffffff"
 }
-
